welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: not found: value getColor
    if ( getColor()!=Color.green){
         ^SlugTracking:14: error: not found: value getColor
    if (getColor!=Color.green){
        ^SlugTracking:18: error: not found: value getColor
      if (getColor!=Color.green){
          ^SlugTracking:26: error: not found: value getColor
  return getColor==Color.green
         ^