welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if ( estFaceMur()){
    gauche()
    avance()
    if ( getColor()!=Color.green){
      recule()
      droite()
      droite() 
      avance()
    }
  }else{
    avance()
    if (getColor!=Color.green){
      recule()
      gauche()
      avance()
      if (getColor!=Color.green){
        recule()
        droite()
        droite()
        avance()
      }
    }
  }
  return getColor==Color.green

}
  
